Reversed direction of flex box to correct boxes overlap order

--- a/app/assets/stylesheets/objects/landing.scss
+++ b/app/assets/stylesheets/objects/landing.scss
@@ -19,7 +19,8 @@
 
 .landing-box-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row-reverse;
+  flex-wrap: wrap-reverse;
   margin-bottom: 20px;
 }
 
